--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,6 +43,8 @@
           <a href="a"><i class='bx bxl-github'></i></a>
           <a href="a"><i class='bx bxl-linkedin-square'></i></a>
         </div>
+
+        <span class="home-imghover"></span>
     </section>
 </body>
 </html>
