--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -26,10 +26,9 @@
         <br>
         <h3>Frontend Developer</h3>
         <br>
-        <pre>Sir, I am a student of Agurchand Manmull Jain College pursuing a degree in BCA </pre>
-        <pre>.In college, I did few projects as part of my curriculum,which helped </pre>
-        <pre>languages such as C , C++ , Python ,etc..I have always me learn about </pre>
-        <pre>interested in learning new things, and I believe this will allow me to do that.</pre>
+        <pre>I am intrested in doing projects because it offers me a great practical experience</pre>
+        <pre>it is a good opportunity to apply my academic knowledge to the real world scenario</pre>
+        <pre>i am eager to gain valuable insights about the industry. </pre>
           <br>
           <div class="btn-box">
             <a href="a">Hire me</a>
@@ -46,5 +45,24 @@
 
         <span class="home-imghover"></span>
     </section>
+    <section class="about" id="about">
+      <h2 class="heading">About <span>Me</span></h2>
+      <div class="about-img">
+        <img src="pic.jpeg" alt="">
+        <span class="circle-spin"></span>
+      </div>
+
+      <div class="about-content">
+        <h3>Frontend Developer</h3>
+        <p>Roshini Sivakumar</p>
+        <p> I am a student of Agurchand Manmull Jain College pursuing a degree in BCA.In college, I did few projects as part of my curriculum,which helped </pre>
+        languages such as C , C++ , Python ,etc..I have always me learn about 
+        interested in learning new things, and I believe this will allow me to do that</P>
+        <div class="btn-box btns">
+          <a href="#" class="btn">Read More</a>
+        </div>
+      </div>
+    </section>
+    <script src="script.js"></script>
 </body>
 </html>
