--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -48,7 +48,7 @@
     <section class="about" id="about">
       <h2 class="heading">About <span>Me</span></h2>
       <div class="about-img">
-        <img src="pic.jpeg" alt="">
+        <img src="rosh final.png" alt="">
         <span class="circle-spin"></span>
       </div>
 
@@ -57,10 +57,83 @@
         <p>Roshini Sivakumar</p>
         <p> I am a student of Agurchand Manmull Jain College pursuing a degree in BCA.In college, I did few projects as part of my curriculum,which helped </pre>
         languages such as C , C++ , Python ,etc..I have always me learn about 
-        interested in learning new things, and I believe this will allow me to do that</P>
+        interested in learning new things, and I believe this will allow me to achive my goals.</P>
         <div class="btn-box btns">
           <a href="#" class="btn">Read More</a>
         </div>
+      </div>
+    </section>
+    <section class="education" id="education">
+      <h2 class="heading">My <span>Journey</span></h2>
+      <div class="education-row">
+        <div class="education-column">
+          <h3 class="title">Education</h3>
+          <div class="education-box">
+            <div class="education-content">
+              <div class="content">
+                <div class="year"><i class='bx bxs-calendar'></i>2023-2024</div>
+                <h3>Master Degree - Madras University</h3>
+                <p>I am a student of Agurchand Manmull Jain College pursuing a degree in BCA ,Now i am currently in second year
+                  and side by side doing some certifacte courses in NPTEL .
+                </p><br>
+              </div>
+            </div>
+
+            <div class="education-content">
+              <div class="content">
+                <div class="year"><i class='bx bxs-calendar'></i>2024-2025</div>
+                <h3>Master Degree - Madras University</h3>
+                <p>I am a student of Agurchand Manmull Jain College pursuing a degree in BCA ,Now i am currently in second year
+                  and side by side doing some certifacte courses in  Computer scicence College(CSC).
+                </p><br>
+              </div>
+            </div>
+          
+
+          <div class="education-content">
+            <div class="content">
+              <div class="year"><i class='bx bxs-calendar'></i>2025-2026</div>
+              <h3>Master Degree - Madras University</h3>
+              <p>I am a student of Agurchand Manmull Jain College pursuing a degree in BCA ,Now i am currently in second year
+                and side by side doing some certifacte courses in Infosys Springboot .
+              </p><br>
+            </div>
+          </div>
+        </div>
+
+        <div class="education-column">
+          <h3 class="title">Experience</h3>
+          <div class="education-box">
+            <div class="education-content">
+              <div class="content">
+              <div class="year"><i class='bx bxs-calendar'></i>2025-2026</div>
+              <h3>Web Developer- College</h3>
+              <p>I am a student of Agurchand Manmull Jain College pursuing a degree in BCA ,Now i am currently in second year
+                and side by side doing some certifacte courses in Infosys Springboot , NPTEL ,Computer scicence College(CSC)
+              </p><br>
+            </div>
+          </div>
+
+          <div class="education-content">
+            <div class="content">
+            <div class="year"><i class='bx bxs-calendar'></i>2025-2026</div>
+            <h3>Web Developer- CSC</h3>
+            <p>I am a student of Agurchand Manmull Jain College pursuing a degree in BCA ,Now i am currently in second year
+              and side by side doing some certifacte courses in Infosys Springboot , NPTEL ,Computer scicence College(CSC)
+            </p><br>
+          </div>
+        </div>
+
+        <div class="education-content">
+          <div class="content">
+          <div class="year"><i class='bx bxs-calendar'></i>2025-2026</div>
+          <h3>Web Developer- Codsoft</h3>
+          <p>I am a student of Agurchand Manmull Jain College pursuing a degree in BCA ,Now i am currently in second year
+            and side by side doing some certifacte courses in Infosys Springboot , NPTEL ,Computer scicence College(CSC)
+          </p><br>
+        </div>
+      </div>
+    </div>
       </div>
     </section>
     <script src="script.js"></script>
