--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -97,7 +98,7 @@
               <p>I am a student of Agurchand Manmull Jain College pursuing a degree in BCA ,Now i am currently in second year
                 and side by side doing some certifacte courses in Infosys Springboot .
               </p><br>
-            </div>
+            </div><br>
           </div>
         </div>
 
@@ -106,13 +107,13 @@
           <div class="education-box">
             <div class="education-content">
               <div class="content">
-              <div class="year"><i class='bx bxs-calendar'></i>2025-2026</div>
-              <h3>Web Developer- College</h3>
-              <p>I am a student of Agurchand Manmull Jain College pursuing a degree in BCA ,Now i am currently in second year
-                and side by side doing some certifacte courses in Infosys Springboot , NPTEL ,Computer scicence College(CSC)
-              </p><br>
+                <div class="year"><i class='bx bxs-calendar'></i>2023-2024</div>
+                <h3>Web Developer - College</h3>
+                <p>I am a student of Agurchand Manmull Jain College pursuing a degree in BCA ,Now i am currently in second year
+                  and side by side doing some certifacte courses in NPTEL .
+                </p><br>
+              </div><br>
             </div>
-          </div>
 
           <div class="education-content">
             <div class="content">
@@ -121,7 +122,7 @@
             <p>I am a student of Agurchand Manmull Jain College pursuing a degree in BCA ,Now i am currently in second year
               and side by side doing some certifacte courses in Infosys Springboot , NPTEL ,Computer scicence College(CSC)
             </p><br>
-          </div>
+          </div><br>
         </div>
 
         <div class="education-content">
@@ -131,11 +132,72 @@
           <p>I am a student of Agurchand Manmull Jain College pursuing a degree in BCA ,Now i am currently in second year
             and side by side doing some certifacte courses in Infosys Springboot , NPTEL ,Computer scicence College(CSC)
           </p><br>
-        </div>
+        </div><br>
       </div>
     </div>
+  </div>
+    </section>
+    <section class="skills" id="skills">
+      <h2 class="heading">My <span>Skills</span></h2>
+      <div class="skills-row">
+        <div class="skills-column">
+          <h3 class="title">Coding Skills</h3>
+
+          <div class="skills-box">
+            <div class="skills-content">
+              <div class="progress">
+                <h3>HTML <span> 90%</span></h3>
+                <div class="bar"><span></span></div>
+              </div><br>
+
+              <div class="progress">
+                <h3>CSS <span> 80%</span></h3>
+                <div class="bar"><span></span></div>
+              </div><br>
+
+              <div class="progress">
+                <h3>JAVASCRIPT <span> 70%</span></h3>
+                <div class="bar"><span></span></div>
+              </div><br>
+
+              <div class="progress">
+                <h3>PYTHON <span> 65%</span></h3>
+                <div class="bar"><span></span></div>
+              </div><br>
+            </div>
+          </div>
+        </div>
+<br>
+<br>
+        <div class="skills-column">
+          <h3 class="title">Professional Skills</h3>
+
+          <div class="skills-box">
+            <div class="skills-content">
+              <div class="progress">
+                <h3>WEB DESING <span> 90%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+
+              <div class="progress">
+                <h3>WEB DEVELOPMENT<span> 80%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+
+              <div class="progress">
+                <h3>GRAPHIC DESIGN<span> 70%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+
+              <div class="progress">
+                <h3>PROGRAMMING <span> 65%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
-    <script src="script.js"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
