--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <nav>
             <div class="class-logo">
-                <img src="map.png" alt="logo" width="100%" height="50px">
+                <img src="map.png" alt="logo" width="100%" height="50px"/>
             </div>
             <ul class="nav-links">
                 <li class="link"><a href="#">Home</a></li>
@@ -31,7 +31,6 @@
         </nav>
         <div class="destination-container">
             <img class="bg-img-2" src="warrow.png" alt="bg" width="60px" height="40px">
-            <img class="bg-img-1" src="dots.png" alt="bg">
             <div class="socials">
                 <span><i class="ri-twitter-fill"></i></span>
                 <span><i class="ri-instagram-line"></i></span>
